refactor: clamp로 수정